--- a/onlinemusicwidget.ui
+++ b/onlinemusicwidget.ui
@@ -189,6 +189,9 @@ background-color:rgba(255,255,255,150);</string>
        <height>20</height>
       </rect>
      </property>
+     <property name="value">
+      <number>99</number>
+     </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
